# BEAM-OPT

./: .releaserc.json  LICENSE  README.md  manage.py  measure_life.xlsx  pyproject.toml  requirements.txt  setup.py
.github/: release.yml
.github/worfklows/: codeartifact-deployment.yml  release.yml
.github/workflows/: codeartifact-deployment.yml
beam_opt/: apps.py  urls.py  views.py
beam_opt/models/: __init__.py  data_container.py  optimizer.py
beam_opt/settings/: beam.py  standalone.py
beam_opt/utils/: parse.py  utils.py  validate.py  workflow.py
